// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Icons <AlarmIcon> renders the expected svg 1`] = `
<svg
  fill="none"
  focusable={false}
  height="100%"
  viewBox="0 0 24 24"
  xmlns="http://www.w3.org/2000/svg"
>
  <circle
    cx="12"
    cy="13"
    r="9"
    strokeLinecap="round"
    strokeLinejoin="round"
    strokeWidth="2"
  />
  <path
    d="M15.5 9.5L12 13"
    strokeLinecap="round"
    strokeLinejoin="round"
    strokeWidth="2"
  />
  <path
    d="M19 19L20 22"
    strokeLinecap="round"
    strokeLinejoin="round"
    strokeWidth="2"
  />
  <path
    d="M5 19L4 22"
    strokeLinecap="round"
    strokeLinejoin="round"
    strokeWidth="2"
  />
  <path
    d="M2 5L5 2"
    strokeLinecap="round"
    strokeLinejoin="round"
    strokeWidth="2"
  />
  <path
    d="M19 2L22 5"
    strokeLinecap="round"
    strokeLinejoin="round"
    strokeWidth="2"
  />
  <path
    d="M12 4V2"
    strokeLinecap="round"
    strokeLinejoin="round"
    strokeWidth="2"
  />
</svg>
`;

exports[`Icons <AlertIcon> renders the expected svg 1`] = `
<svg
  fill="none"
  focusable={false}
  viewBox="0 0 24 24"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M12 9V14"
    strokeLinecap="round"
    strokeWidth="2"
  />
  <path
    d="M12 17.5V18"
    strokeLinecap="round"
    strokeWidth="2"
  />
  <path
    d="M2.23231 19.0159L10.3489 3.05158C11.0617 1.64947 12.9383 1.64947 13.6512 3.05158L21.7677 19.0159C22.4513 20.3606 21.5442 22 20.1165 22H3.88346C2.45582 22 1.54868 20.3606 2.23231 19.0159Z"
    strokeLinecap="round"
    strokeLinejoin="round"
    strokeWidth="2"
  />
</svg>
`;

exports[`Icons <ArrowIcon> renders the expected svg 1`] = `
<svg
  fill="none"
  focusable={false}
  viewBox="0 0 24 24"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M8 5L3 10L8 15"
    strokeLinecap="round"
    strokeLinejoin="round"
    strokeWidth="2"
  />
  <path
    d="M3 10H11C16.5228 10 21 14.4772 21 20V21"
    strokeLinecap="round"
    strokeLinejoin="round"
    strokeWidth="2"
  />
</svg>
`;

exports[`Icons <InfoIcon> renders the expected svg 1`] = `
<svg
  fill="none"
  focusable={false}
  viewBox="0 0 24 24"
  xmlns="http://www.w3.org/2000/svg"
>
  <circle
    cx="12"
    cy="12"
    r="10"
    strokeWidth="2"
  />
  <path
    d="M12 7H12.01"
    strokeLinecap="round"
    strokeWidth="2"
  />
  <path
    d="M10 11H12V16"
    strokeLinecap="round"
    strokeLinejoin="round"
    strokeWidth="2"
  />
  <path
    d="M10 16H14"
    strokeLinecap="round"
    strokeLinejoin="round"
    strokeWidth="2"
  />
</svg>
`;
